# Compiler-for-mercury-Lang

./: .clang-tidy  CMakeLists.txt  a.out  new.test  pratt.test  test.mc
header/: astNode.hpp  llvm_gen.hpp  prattParser.hpp  recDescParser.hpp  token.hpp
src/: main.cpp
tests/pratt/: t1.mc  t2  t3  t4  t5
tests/rdptest/: t1
